# Technion-CS-Assignments-AvivLevy

./: README.md
Computer_Programming_And_Organization/HW1/ATAM_HW1/: ex1.asm  ex5.asm
Computer_Programming_And_Organization/HW1/student_files/: ex2.asm  ex3.asm  ex4.asm
Data_Structures/data_structures1-AVLTree/: CMakeLists.txt  avl.h  herd.h  horse.h  main.out  plains25a1.cpp  plains25a1.h  test0.cpp
Data_Structures/data_structures1-AVLTree/tests/: test30.res  test40.res
Data_Structures/data_structures2/: CMakeLists.txt  chainHash.h  jockey.h  main.out  plains25a2.cpp  plains25a2.h  record.h  team.h  unoinFind.h
Databases/Databases_HW2/: Business_Objects.sql  Solution.py
Intro_To_AI/HW1-Intro_To_AI/: Algorithms.py
Intro_To_AI/HW2-Intro_To_AI/: submission.py
Intro_To_AI/HW3-Intro_To_AI/: ID3.py  ID3_experiments.py  requirements.txt  utils.py
Operating_Systems/OS_HW1/: CMakeLists.txt  Commands.cpp  Commands.h  Makefile  environment.cpp  environment.h  ordered_map.h  signals.cpp  smash.cpp  utilies.cpp  utilies.h
Systems_Programming/enigma/: enigma.py
Systems_Programming/matam_game/: CMakeLists.txt  MatamStory  MatamStory.cpp  MatamStory.h  Utilities.h  log.txt
Systems_Programming/matam_game/Events/: Event.cpp  Event.h  Monster.cpp  Monster.h
Systems_Programming/matam_game/Players/: Character.h  Job.h  Player.cpp  Player.h
Systems_Programming/matam_game/tests/: test4.events  test4.players
Systems_Programming/sorted_list/: CMakeLists.txt  Person.cpp  SortedList.h  TaskManager  TaskManager.cpp  TaskManager.h  log.txt  main.cpp
(+31 files in other folders)
